# bind

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bind/: CMakeLists.txt  bind.hpp
bind/include/core/: app.hpp
bind/include/dotnet/: assembly.hpp  hostfxr_ctx.hpp
bind/src/: main.cpp
bind/src/core/: app.cpp
bind/src/dotnet/: assembly.cpp  hostfxr_ctx.cpp
examples/: CMakeLists.txt
examples/simple_console/: CMakeLists.txt
examples/simple_console/managed/: Test.cs  managed.csproj
examples/simple_console/native/: main.cpp
